# BT2_Assignment1

./: Cargo.toml  README.md
src/: insertion.rs  lib.rs  merge.rs  quick.rs  selection.rs
